react-design/pages/api/css/side.css
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	list-style: none;
	text-decoration: none;
	font-family: arial;
}

.wrapper {
	position: relative;
}

html{
	background-color: #F5F6F8;
}

.sidebar {
	position: fixed;
	top: 0;
	left: 0;
	width: 18%;
	height: 100%;
	background-color: white;
	padding: 20px 0;
	padding-right: 10px;
	border-right: 3px solid #F5F6F8; 
}

.menu{
	overflow: scroll;
	box-sizing: border-box;
	padding-left: 10px;
}

.logo{
	margin-bottom: 2.5rem;
}

.menu::-webkit-scrollbar {
    display: none;
}

.Item {
	padding: 15px 0px;
	border-radius: 10px;
}


.Item a{
	text-decoration: none;
	color: black;
	padding: 15px ;
	border-radius: 10px;
}

.down{
	margin-left: 40%;
}

.down2{
	margin-left: 30%;

}

.down3{
	margin-left: 39%;

}

.Item a:hover{
	color: white;
	background-color: #233B82;
}

.noLink{
	padding: 15px ;
	border-radius: 10px;
}

.noLink:hover{
	color: white;
	background-color: #233B82;
}

.collapse li{
	padding: 0px 0px 0px 0px;
}

.collapse a{
	padding: 10px 0px 10px 10px;
	display: block;
}

.collapse ul{
	padding-top: 13px;
}

.collapse li{
	list-style-type: circle;
}

#card{
	width: 16%;
	background-color: #233B82;
	color: white;
	position: fixed;
	bottom: 10px;
	left: 5px;
	z-index: 1;
}

#card .btn{
	width: 100%;
}

.bg{
	position: fixed;
	height: 360px;
	bottom: -4%;
	left: 8%;
	z-index: 2;
	transform: rotate(25deg);
}

